--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,14 +1,21 @@
 {
   "comments": {
-    "blockComment": ["(#", ")"]
+    "lineComment": "#"
   },
   // symbols used as brackets
-  "brackets": [["(", ")"]],
+  "brackets": [
+    ["(", ")"],
+    ["[", "]"],
+    ["{", "}"]
+  ],
   // symbols that are auto closed when typing
   "autoClosingPairs": [
-    ["\"", "\""],
-    ["(", ")"]
-  ],
+    ["(", ")"],
+    ["{", "}"],
+    ["[", "]"],
+    ["<", ">"],
+    ["⟨", "⟩"]
+  ]
   // symbols that can be used to surround a selection
-  "surroundingPairs": [["(", ")"]]
+  // "surroundingPairs": [["(", ")"]]
 }
